--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "thiering",
+  "name": "react-native-thiering",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+  "description": "Bundle of useful and beautiful customizable components",
+  "author": "Noah Thiering",
+  "license": "MIT",
+  "main": "index.ts",
+  "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noah4ever/react-native-thiering.git"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "prettier": "^2.8.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@tsconfig/react-native": "^2.0.3",
-    "@types/jest": "^29.2.5",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.70.8",
     "@types/react-native-vector-icons": "^6.4.13",
-    "@types/react-test-renderer": "^18.0.0",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "keywords": [
+    "dropdown",
+    "android",
+    "ios",
+    "selectlist",
+    "searchable",
+    "list",
+    "dropdown-picker",
+    "react",
+    "react native",
+    "react-native",
+    "reactnative",
+    "selectlist",
+    "expo",
+    "easy",
+    "menu",
+    "tag",
+    "chooser"
+  ]
 }
